--- a/nodejs-talk/index.html
+++ b/nodejs-talk/index.html
@@ -1,87 +1,273 @@
 <!doctype html>
 <html lang="en">
 
-	<head>
-		<meta charset="utf-8">
+    <head>
+        <meta charset="utf-8">
 
-		<title>Serverseitiges JavaScript und GIS</title>
+        <title>Serverseitiges JavaScript und GIS</title>
 
-		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-		<meta name="author" content="Hakim El Hattab">
+        <meta name="description" content="A framework for easily creating beautiful presentations using HTML">
+        <meta name="author" content="Hakim El Hattab">
 
-		<meta name="apple-mobile-web-app-capable" content="yes" />
-		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 
-		<link rel="stylesheet" href="../resources/reveal.js-3.0.0/css/reveal.css">
-		<link rel="stylesheet" href="../resources/reveal.js-3.0.0/css/theme/black.css" id="theme">
+        <link rel="stylesheet" href="../resources/reveal.js-3.0.0/css/reveal.css">
+        <link rel="stylesheet" href="../resources/reveal.js-3.0.0/css/theme/black.css" id="theme">
 
-		<!-- Code syntax highlighting -->
-		<link rel="stylesheet" href="../resources/reveal.js-3.0.0/lib/css/zenburn.css">
+        <!-- Code syntax highlighting -->
+        <link rel="stylesheet" href="../resources/reveal.js-3.0.0/lib/css/zenburn.css">
 
-		<!-- Printing and PDF exports -->
-		<script>
-			var link = document.createElement( 'link' );
-			link.rel = 'stylesheet';
-			link.type = 'text/css';
-			link.href = window.location.search.match( /print-pdf/gi ) ? '../resources/reveal.js-3.0.0/css/print/pdf.css' : '../resources/reveal.js-3.0.0/css/print/paper.css';
-			document.getElementsByTagName( 'head' )[0].appendChild( link );
-		</script>
+        <!-- Printing and PDF exports -->
+        <script>
+            var link = document.createElement( 'link' );
+            link.rel = 'stylesheet';
+            link.type = 'text/css';
+            link.href = window.location.search.match( /print-pdf/gi ) ? '../resources/reveal.js-3.0.0/css/print/pdf.css' : '../resources/reveal.js-3.0.0/css/print/paper.css';
+            document.getElementsByTagName( 'head' )[0].appendChild( link );
+        </script>
 
-		<!--[if lt IE 9]>
-		<script src="lib/js/html5shiv.js"></script>
-		<![endif]-->
-	</head>
+        <!--[if lt IE 9]>
+        <script src="lib/js/html5shiv.js"></script>
+        <![endif]-->
+    </head>
 
-	<body>
+    <body>
 
-		<div class="reveal">
+        <div class="reveal">
 
-			<!-- Any section element inside of this container is displayed as a slide -->
-			<div class="slides">
-				<section>
-					<h1>Serverseitiges JavaScript und GIS</h1>
-					<h3>Mit Node.js und npm die Welt beherrschen</h3>
-					<p>
-						<small>Christian Mayer und Marc Jansen</a></small>
-					</p>
-				</section>
+            <!-- Any section element inside of this container is displayed as a slide -->
+            <div class="slides">
+                <section>
+                    <h1>Serverseitiges JavaScript und GIS</h1>
+                    <h3>Mit Node.js und npm die Welt beherrschen</h3>
+                    <p>
+                        <small>Christian Mayer und Marc Jansen</a></small>
+                    </p>
+                </section>
 
-				<section>
-                    lorem ipsum
-				</section>
-			</div>
+                <section>
+                    <h2>Christian Mayer</h2>
+                    <ul>
+                        <li>No order here</li>
+                        <li>Or here</li>
+                        <li>Or here</li>
+                        <li>Or here</li>
+                    </ul>
+                </section>
+                <section>
+                    <h2>Marc Jansen</h2>
+                    <ul>
+                        <li>No order here</li>
+                        <li>Or here</li>
+                        <li>Or here</li>
+                        <li>Or here</li>
+                    </ul>
+                </section>
 
-		</div>
+                <section>
+                    <section>
+                        <h2>node.js</h2>
+                        <ul>
+                            <li>No order here</li>
+                            <li>Or here</li>
+                            <li>Or here</li>
+                            <li>Or here</li>
+                        </ul>
+                    </section>
+                    <section>
+                        <h2>Basement Level 1</h2>
+                        <p>Nested slides are useful for adding additional detail underneath a high level horizontal slide.</p>
+                    </section>
+                    <section>
+                        <h2>Basement Level 2</h2>
+                        <p>That's it, time to go back up.</p>
+                    </section>
+                </section>
 
-		<script src="../resources/reveal.js-3.0.0/lib/js/head.min.js"></script>
-		<script src="../resources/reveal.js-3.0.0/js/reveal.js"></script>
+                <section>
+                    <section>
+                        <h2>npm</h2>
+                        <ul>
+                            <li>No order here</li>
+                            <li>Or here</li>
+                            <li>Or here</li>
+                            <li>Or here</li>
+                        </ul>
+                    </section>
+                    <section>
+                        <h2>Basement Level 1</h2>
+                        <p>Nested slides are useful for adding additional detail underneath a high level horizontal slide.</p>
+                    </section>
+                    <section>
+                        <h2>Basement Level 2</h2>
+                        <p>That's it, time to go back up.</p>
+                    </section>
+                </section>
 
-		<script>
+                <section>
+                    <section>
+                        <h2>turf.js</h2>
+                        <ul>
+                            <li>No order here</li>
+                            <li>Or here</li>
+                            <li>Or here</li>
+                            <li>Or here</li>
+                        </ul>
+                    </section>
+                    <section>
+                        <h2>Basement Level 1</h2>
+                        <p>Nested slides are useful for adding additional detail underneath a high level horizontal slide.</p>
+                    </section>
+                    <section>
+                        <h2>Basement Level 2</h2>
+                        <p>That's it, time to go back up.</p>
+                    </section>
+                </section>
 
-			// Full list of configuration options available at:
-			// https://github.com/hakimel/reveal.js#configuration
-			Reveal.initialize({
-				controls: true,
-				progress: true,
-				history: true,
-				center: true,
+                <section>
+                    <section>
+                        <h2>Shapefile.js</h2>
+                        <ul>
+                            <li>No order here</li>
+                            <li>Or here</li>
+                            <li>Or here</li>
+                            <li>Or here</li>
+                        </ul>
+                    </section>
+                    <section>
+                        <h2>Basement Level 1</h2>
+                        <p>Nested slides are useful for adding additional detail underneath a high level horizontal slide.</p>
+                    </section>
+                    <section>
+                        <h2>Basement Level 2</h2>
+                        <p>That's it, time to go back up.</p>
+                    </section>
+                </section>
 
-				transition: 'slide', // none/fade/slide/convex/concave/zoom
+                <section>
+                    <section>
+                        <h2>proj4</h2>
+                        <ul>
+                            <li>No order here</li>
+                            <li>Or here</li>
+                            <li>Or here</li>
+                            <li>Or here</li>
+                        </ul>
+                    </section>
+                    <section>
+                        <h2>Basement Level 1</h2>
+                        <p>Nested slides are useful for adding additional detail underneath a high level horizontal slide.</p>
+                    </section>
+                    <section>
+                        <h2>Basement Level 2</h2>
+                        <p>That's it, time to go back up.</p>
+                    </section>
+                </section>
 
-				// Optional reveal.js plugins
-				dependencies: [
-					{ src: '../resources/reveal.js-3.0.0/lib/js/classList.js', condition: function() { return !document.body.classList; } },
-					{ src: '../resources/reveal.js-3.0.0/plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-					{ src: '../resources/reveal.js-3.0.0/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-					{ src: '../resources/reveal.js-3.0.0/plugin/highlight/highlight.js', async: true, condition: function() { return !!document.querySelector( 'pre code' ); }, callback: function() { hljs.initHighlightingOnLoad(); } },
-					{ src: '../resources/reveal.js-3.0.0/plugin/zoom-js/zoom.js', async: true },
-					{ src: '../resources/reveal.js-3.0.0/plugin/notes/notes.js', async: true }
-				]
-			});
+                <section>
+                    <section>
+                        <h2>Web map (Leaflet oder ol3)</h2>
+                        <ul>
+                            <li>No order here</li>
+                            <li>Or here</li>
+                            <li>Or here</li>
+                            <li>Or here</li>
+                        </ul>
+                    </section>
+                    <section>
+                        <h2>Basement Level 1</h2>
+                        <p>Nested slides are useful for adding additional detail underneath a high level horizontal slide.</p>
+                    </section>
+                    <section>
+                        <h2>Basement Level 2</h2>
+                        <p>That's it, time to go back up.</p>
+                    </section>
+                </section>
 
-		</script>
+                <section>
+                    <section>
+                        <h2>Alles zusammen in Action</h2>
+                        <ul>
+                            <li>Daten laden</li>
+                            <li>Daten aufbereiten</li>
+                            <li>Speichern</li>
+                            <li>Publizieren</li>
+                        </ul>
+                    </section>
+                    <section>
+                        <h2>Basement Level 1</h2>
+                        <p>Nested slides are useful for adding additional detail underneath a high level horizontal slide.</p>
+                    </section>
+                    <section>
+                        <h2>Basement Level 2</h2>
+                        <p>That's it, time to go back up.</p>
+                    </section>
+                </section>
 
-	</body>
+                <section>
+                    <h2>Fazit / Message</h2>
+                    <ul>
+                        <li>No order here</li>
+                        <li>Or here</li>
+                        <li>Or here</li>
+                        <li>Or here</li>
+                    </ul>
+                </section>
+
+                <section>
+                    <h2>Schlussfolie</h2>
+                    <ul>
+                        <li>No order here</li>
+                        <li>Or here</li>
+                        <li>Or here</li>
+                        <li>Or here</li>
+                    </ul>
+                </section>
+
+                <section>
+                    <h2>Impressum</h2>
+                    <ul>
+                        <li>No order here</li>
+                        <li>Or here</li>
+                        <li>Or here</li>
+                        <li>Or here</li>
+                    </ul>
+                </section>
+
+            </div>
+
+        </div>
+
+        <script src="../resources/reveal.js-3.0.0/lib/js/head.min.js"></script>
+        <script src="../resources/reveal.js-3.0.0/js/reveal.js"></script>
+
+        <script>
+
+            // Full list of configuration options available at:
+            // https://github.com/hakimel/reveal.js#configuration
+            Reveal.initialize({
+                controls: true,
+                progress: true,
+                history: true,
+                center: true,
+
+                transition: 'slide', // none/fade/slide/convex/concave/zoom
+
+                // Optional reveal.js plugins
+                dependencies: [
+                    { src: '../resources/reveal.js-3.0.0/lib/js/classList.js', condition: function() { return !document.body.classList; } },
+                    { src: '../resources/reveal.js-3.0.0/plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+                    { src: '../resources/reveal.js-3.0.0/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+                    { src: '../resources/reveal.js-3.0.0/plugin/highlight/highlight.js', async: true, condition: function() { return !!document.querySelector( 'pre code' ); }, callback: function() { hljs.initHighlightingOnLoad(); } },
+                    { src: '../resources/reveal.js-3.0.0/plugin/zoom-js/zoom.js', async: true },
+                    { src: '../resources/reveal.js-3.0.0/plugin/notes/notes.js', async: true }
+                ]
+            });
+
+        </script>
+
+    </body>
 </html>
