Draft chapter node.js

--- a/nodejs-talk/index.html
+++ b/nodejs-talk/index.html
@@ -44,7 +44,10 @@
                     <h1>Serverseitiges JavaScript und GIS</h1>
                     <h3>Mit Node.js und npm die Welt beherrschen</h3>
                     <p>
-                        <small>Christian Mayer und Marc Jansen</a></small>
+                        <small>Christian Mayer und Marc Jansen</small>
+                    </p>
+                    <p>
+                        <span style="font-size: small;">FOSSGIS 2015, Münster, 12.03.2015</small>
                     </p>
                 </section>
 
@@ -69,21 +72,42 @@
 
                 <section>
                     <section>
+                        <h2>Warum node.js?</h2>
+                        <h2><span class="fragment">Warum nicht!</span></h2>
+                    </section>
+                    <section>
+                        <h2>node.js</h2>
+                        <blockquote cite="http://searchservervirtualization.techtarget.com/definition/Our-Favorite-Technology-Quotations">
+                            A platform built on Chrome's JavaScript runtime for easily building fast,
+                            scalable network applications.
+                            Node.js uses an event-driven, non-blocking I/O model
+                            that makes it lightweight and efficient,
+                            perfect for data-intensive real-time applications that run across
+                            distributed devices.
+                        </blockquote>
+                        <span style="font-size: small;">Quelle: https://www.openshift.com/products/technologies</small>
+                    </section>
+                    <section>
+                        <h2>node.js</h2>
+                        <blockquote cite="http://searchservervirtualization.techtarget.com/definition/Our-Favorite-Technology-Quotations">
+                            A platform built on Chrome's JavaScript runtime for easily building fast,
+                            scalable <span style="color: red;">network applications</span>.
+                            Node.js uses an <span style="color: red;">event-driven, non-blocking I/O model</span>
+                            that makes it lightweight and efficient,
+                            perfect for <span style="color: red;">data-intensive real-time applications</span>
+                            that run across distributed devices.
+                        </blockquote>
+                        <span style="font-size: small;">Quelle: https://www.openshift.com/products/technologies</small>
+                        </section>
+                    <section>
                         <h2>node.js</h2>
                         <ul>
-                            <li>No order here</li>
-                            <li>Or here</li>
-                            <li>Or here</li>
-                            <li>Or here</li>
+                            <li>Serverseitige JavaScript Plattform</li>
+                            <li>Verarbeitung von großen Datenmengen durch nicht blockierendes IO-System</li>
+                            <li>Event-basiert</li>
+                            <li>Ideal für Webanwendungen</li>
+                            <li>Open Source (MIT)</li>
                         </ul>
-                    </section>
-                    <section>
-                        <h2>Basement Level 1</h2>
-                        <p>Nested slides are useful for adding additional detail underneath a high level horizontal slide.</p>
-                    </section>
-                    <section>
-                        <h2>Basement Level 2</h2>
-                        <p>That's it, time to go back up.</p>
                     </section>
                 </section>
 
