Draft chapter npm

--- a/nodejs-talk/index.html
+++ b/nodejs-talk/index.html
@@ -107,6 +107,7 @@
                             <li>Event-basiert</li>
                             <li>Ideal für Webanwendungen</li>
                             <li>Open Source (MIT)</li>
+                            <li>Aktuelle Version 0.12.0 (06.Feb.2015)</li>
                         </ul>
                     </section>
                 </section>
@@ -115,19 +116,35 @@
                     <section>
                         <h2>npm</h2>
                         <ul>
-                            <li>No order here</li>
-                            <li>Or here</li>
-                            <li>Or here</li>
-                            <li>Or here</li>
+                            <li>Paketmanager für JavaScript</li>
+                            <li>Standard Paket-Repository für node.js (Seit Node.js Version 0.6.3 Teil der Installation)</li>
+                            <li>Einfache Installation von Software-Pakten</li>
+                            <li>Automatische Auflösung von Abhängigkeiten</li>
+                            <li>Defacto-Standard zur Modularisierung von JavaScript</li>
+                        </ul>
+                        <p>
+                          <a href="https://www.npmjs.com/">Übersicht der npm-Registry</a>
+                        </p>
+                    </section>
+                    <section>
+                        <h2>npm facts</h2>
+                        <ul>
+                            <li>~ 130.000 Pakete (Anfang März 2015)</li>
+                            <li>~ 1.000.000.000 Downloads im vergangenen Monat (Feb. 2015)</li>
+                            <li>~ 6.400 Pakete für die Schlagwörter <code>mapping, map,gis,geo,osm</code> (Anfang März 2015)</li>
+                            <li>u.a. auch OpenLayers und Leaflet</li>
+                            <li>npm stellt seine eigenen Code auf npmjs.org bereit</li>
                         </ul>
                     </section>
                     <section>
-                        <h2>Basement Level 1</h2>
-                        <p>Nested slides are useful for adding additional detail underneath a high level horizontal slide.</p>
-                    </section>
-                    <section>
-                        <h2>Basement Level 2</h2>
-                        <p>That's it, time to go back up.</p>
+                        <h2>npm - Installation von Paketen</h2>
+                    <pre><code data-trim contenteditable>
+>> npm install package_name
+                    </code></pre>
+                    <pre><code data-trim contenteditable>
+>> npm install ol-app-setup -g
+                    </code></pre>
+                    <a href="https://docs.npmjs.com/getting-started/installing-npm-packages-locally">weitere Informationen...</a>
                     </section>
                 </section>
 
