Draft chapter turf

--- a/nodejs-talk/index.html
+++ b/nodejs-talk/index.html
@@ -149,22 +149,39 @@
                 </section>
 
                 <section>
+                    <h1>Mit Node.js und npm die Welt beherrschen</h1>
+                    <a href="http://photobucket.com/images/pinky%20and%20the%20brain" target="_blank"><img src="http://i392.photobucket.com/albums/pp5/jefforycloyd/JeffsCartoons/PinkyandtheBrain.jpg" border="0" alt="pinky and the brain photo: Pinky and the Brain PinkyandtheBrain.jpg"/></a>
+                </section>
+
+                <section>
+                    <section style="background-image: url(img/grass.jpg);">
+                        <h1 style="">turf.js</h1>
+                        <span style="font-size: small;">Quelle Bild: http://www.macwright.org/presentations/turf-geodc/grass.jpg</small>
+                    </section>
                     <section>
                         <h2>turf.js</h2>
                         <ul>
-                            <li>No order here</li>
-                            <li>Or here</li>
-                            <li>Or here</li>
-                            <li>Or here</li>
+                            <li>JS-Bibliothek zur Geodatenverarbeitung und für räumliche Analysen</li>
+                            <li>Erschienen 2014</li>
+                            <li>Neuentwicklung, kein Port von JTS</li>
+                            <li>Native Unterstützung von GeoJSON</li>
+                            <li>Nutzbar in Client UND Server (eine Codebasis)</li>
+                            <li>Open Source (MIT)</li>
                         </ul>
+                        <pre><code data-trim contenteditable>
+>> npm install turf
+                    </code></pre>
                     </section>
                     <section>
-                        <h2>Basement Level 1</h2>
-                        <p>Nested slides are useful for adding additional detail underneath a high level horizontal slide.</p>
-                    </section>
-                    <section>
-                        <h2>Basement Level 2</h2>
-                        <p>That's it, time to go back up.</p>
+                        <h2>turf.js - Funktionen (Auszug)</h2>
+                        <ul>
+                            <li>Transformationen (Buffer, Merge, Union, ...)</li>
+                            <li>Measurement (Area, Envelope, Distance, ...)</li>
+                            <li>Aggregation (Sum, Average, Aggregate...)</li>
+                            <li>Classification (Nearest, Reclass, ...)</li>
+                            <li>Interpolation (TIN, Isolines, Triangle-Grid, ...)</li>
+                            <li>...</li>
+                        </ul>
                     </section>
                 </section>
 
