--- a/nodejs-talk/index.html
+++ b/nodejs-talk/index.html
@@ -241,33 +241,26 @@ function readFeature(reader) {
 }
                         </code></pre>
                     </section>
-                    <section>
-                        <h2>Basement Level 1</h2>
-                        <p>Nested slides are useful for adding additional detail underneath a high level horizontal slide.</p>
-                    </section>
-                    <section>
-                        <h2>Basement Level 2</h2>
-                        <p>That's it, time to go back up.</p>
-                    </section>
                 </section>
 
                 <section>
                     <section>
                         <h2>proj4</h2>
                         <ul>
-                            <li>No order here</li>
-                            <li>Or here</li>
-                            <li>Or here</li>
-                            <li>Or here</li>
+                            <li>Projektion / Transformation von Geodaten</li>
                         </ul>
-                    </section>
-                    <section>
-                        <h2>Basement Level 1</h2>
-                        <p>Nested slides are useful for adding additional detail underneath a high level horizontal slide.</p>
-                    </section>
-                    <section>
-                        <h2>Basement Level 2</h2>
-                        <p>That's it, time to go back up.</p>
+                        <pre><code data-trim contenteditable>
+>> npm install proj4
+                        </code></pre>
+                        <pre><code data-trim contenteditable>
+// 3rd party deps
+var proj4 = require('proj4');
+
+// reproject a point
+var projected = proj4('EPSG:4326', 'EPSG:900913', [2,5]);
+//[ 222638.98158654713, 557305.2572745753 ]
+console.log(projected);
+                        </code></pre>
                     </section>
                 </section>
 
