Draft imprint slide

--- a/nodejs-talk/index.html
+++ b/nodejs-talk/index.html
@@ -326,12 +326,31 @@ console.log(projected);
 
                 <section>
                     <h2>Impressum</h2>
-                    <ul>
-                        <li>No order here</li>
-                        <li>Or here</li>
-                        <li>Or here</li>
-                        <li>Or here</li>
-                    </ul>
+                    <h3>Autoren</h3>
+                    <div style="width: 45%; float: left;">
+                        <address>
+                            Christian Mayer<br />
+                            meggsimum.de<br />
+                            Hauptstraße 165a<br />
+                            67125 Dannstadt-Schauernheim<br />
+                            chris@meggsimum.de
+                        </address>
+                    </div>
+                    <div style="width: 45%; float: right;">
+                        <address>
+                            Marc Jansen<br />
+                            terrestris GmbH &amp; Co. KG<br />
+                            P&uuml;tzchens Chaussee 56<br />
+                            53227 Bonn<br />
+                            jansen@terrestris.de
+                        </address>
+                    </div>
+                    <h3 style="clear:both;">Lizenz</h3>
+                    <p id="license">
+                        Diese Folien sind unter <a
+                        href="http://creativecommons.org/licenses/by-sa/2.0/">CC BY-SA</a>
+                        veröffentlicht.
+                    </p>
                 </section>
 
             </div>
