Add HTML meta information.

--- a/nodejs-talk/index.html
+++ b/nodejs-talk/index.html
@@ -1,13 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html lang="de">
 
     <head>
         <meta charset="utf-8">
 
-        <title>Serverseitiges JavaScript und GIS</title>
+        <title>Serverseitiges JavaScript und GIS &mdash; Mit Node.js und npm die Welt beherrschen</title>
 
-        <meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-        <meta name="author" content="Hakim El Hattab">
+        <meta name="description" content="Vortrag auf der FOSSGIS 2015: 'Serverseitiges JavaScript und GIS - Mit Node.js und npm die Welt beherrschen' von C. Mayer und M. Jansen">
+        <meta name="author" content="Christian Mayer">
+        <meta name="author" content="Marc Jansen">
 
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
