--- a/nodejs-talk/index.html
+++ b/nodejs-talk/index.html
@@ -33,6 +33,8 @@
         <!--[if lt IE 9]>
         <script src="lib/js/html5shiv.js"></script>
         <![endif]-->
+
+        <link rel="stylesheet" href="../resources/customized.css">
     </head>
 
     <body>
