--- a/nodejs-talk/index.html
+++ b/nodejs-talk/index.html
@@ -55,6 +55,16 @@
                 </section>
 
                 <section>
+                    <h2>Gliederung</h2>
+                    <ul>
+                        <li>Über&hellip;</li>
+                        <li>Node.js und Freunde</li>
+                        <li>Beispiele und Highlights</li>
+                        <li>Fazit</li>
+                    </ul>
+                </section>
+
+                <section>
                     <h2>Christian Mayer</h2>
                     <ul>
                         <li>No order here</li>
