More about-content (author/company).

--- a/nodejs-talk/index.html
+++ b/nodejs-talk/index.html
@@ -64,23 +64,79 @@
                     </ul>
                 </section>
 
-                <section>
+                <section id="author-christian-mayer" class="author">
                     <h2>Christian Mayer</h2>
+                    <img src="img/cm.jpg">
                     <ul>
-                        <li>No order here</li>
-                        <li>Or here</li>
-                        <li>Or here</li>
-                        <li>Or here</li>
+                        <li>Kernentwickler GeoExt</li>
+                        <li>OSGeo Foundation Charter Member</li>
                     </ul>
                 </section>
-                <section>
+
+                <section id="author-marc-jansen" class="author">
                     <h2>Marc Jansen</h2>
+                    <img src="img/mj.jpg">
+                    <img src="img/openlayers_de_1ed.png" class="plain" style="width: 15%">
                     <ul>
-                        <li>No order here</li>
-                        <li>Or here</li>
-                        <li>Or here</li>
-                        <li>Or here</li>
+                        <li>Seit 2007 Entwickler / Projektleiter bei terrestris</li>
+                        <li>Kernentwickler und PSC Mitglied GeoExt</li>
+                        <li>Kernentwickler OpenLayers</li>
+                        <li>Buchautor "OpenLayers"</li>
+                        <li>OSGeo Foundation Charter Member</li>
                     </ul>
+                </section>
+
+                <section id="about-company-meggsimum">
+                    <h2>meggsimum</h2>
+                    <div class="split-info">
+                        <div class="part">
+                            <img src="img/meggsimum-logo.png" class="plain contrast" width="192"/>
+                            <br /><br />
+                            <a class="github" href="https://github.com/chrismayer/">@chrismayer</a><br />
+                            <a class="twitter" href="https://twitter.com/meggsimum/">@meggsimum</a>
+                        </div>
+                        <div class="part">
+                            <div class="enumeration">
+                                <ul>
+                                    <li><a href="http://meggsimum.de/">http://meggsimum.de/</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                 </section>
+
+                <section id="about-company-terrestris">
+                    <h2 class="force-natural-case">terrestris</h2>
+                    <div class="split-info">
+                        <div class="part">
+                            <img src="img/terrestris-logo.png" class="plain contrast" width="192"/>
+                            <br /><br />
+                            <a class="github" href="https://github.com/terrestris/">@terrestris</a><br />
+                            <a class="twitter" href="https://twitter.com/terrestrisde/">@terrestrisde</a>
+                        </div>
+                        <div class="part">
+                            <div class="enumeration">
+                                <ul>
+                                    <li><a href="http://terrestris.de/">terrestris.de</a></li>
+                                    <li>OpenSource GIS aus Bonn</li>
+                                    <li>Entwicklung, Projekte &amp; Support/Schulung</li>
+                                    <li>Beratung, Planung, Implementierung & Wartung</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                 </section>
+
+                 <section>
+                    <h2>Über diesen Vortrag</h2>
+                    <ul class="stretch" style="margin: 0 3em;">
+                        <li>Überblick serverseitiges JS <span class="ok">✔</span></li>
+                        <li>Beispiel und Module <span class="ok">✔</span></li>
+                        <li>Ziel: Interesse wecken <span class="ok">✔</span></li>
+                        <li>Komplettlösung aller Probleme <span class="nope">✗</span></li>
+                        <li class="fragment">&hellip;aber das hatten Sie natürlich auch nicht erwartet <span class="grin">😄</span></li>
+                    </ul>
+
                 </section>
 
                 <section>
