--- a/nodejs-talk/index.html
+++ b/nodejs-talk/index.html
@@ -141,11 +141,10 @@
 
                 <section>
                     <section>
-                        <h2>Warum node.js?</h2>
-                        <h2><span class="fragment">Warum nicht!</span></h2>
+                        <h2>Warum Node.js?</h2>
                     </section>
                     <section>
-                        <h2>node.js</h2>
+                        <h2>Node.js</h2>
                         <blockquote cite="http://searchservervirtualization.techtarget.com/definition/Our-Favorite-Technology-Quotations">
                             A platform built on Chrome's JavaScript runtime for easily building fast,
                             scalable network applications.
@@ -157,7 +156,7 @@
                         <span style="font-size: small;">Quelle: https://www.openshift.com/products/technologies</small>
                     </section>
                     <section>
-                        <h2>node.js</h2>
+                        <h2>Node.js</h2>
                         <blockquote cite="http://searchservervirtualization.techtarget.com/definition/Our-Favorite-Technology-Quotations">
                             A platform built on Chrome's JavaScript runtime for easily building fast,
                             scalable <span style="color: red;">network applications</span>.
@@ -169,7 +168,7 @@
                         <span style="font-size: small;">Quelle: https://www.openshift.com/products/technologies</small>
                         </section>
                     <section>
-                        <h2>node.js</h2>
+                        <h2>Node.js</h2>
                         <ul>
                             <li>Serverseitige JavaScript Plattform</li>
                             <li>Verarbeitung von großen Datenmengen durch nicht blockierendes IO-System</li>
