Add summary slide and hello world example.

--- a/nodejs-talk/index.html
+++ b/nodejs-talk/index.html
@@ -181,7 +181,25 @@
                         </ul>
                     </section>
                     <section>
-                        <h2>node.js - Beispiel</h2>
+                        <h2>JavaScript&hellip;</h2>
+                        <br>
+                        <br>
+                        <h2  class="fragment">&hellip;auf dem Server</h2>
+                    </section>
+                    <section>
+                        <h2>Hello World</h2>
+                        <pre><code data-trim contenteditable>
+console.log("Hello, World");
+                        </code></pre>
+                        <pre class="fragment"><code data-trim contenteditable>
+>> node hello-world.js
+                        </code></pre>
+                        <pre class="fragment"><code data-trim contenteditable>
+>> Hello, World
+                        </code></pre>
+                    </section>
+                    <section>
+                        <h2>Node.js - Beispiel</h2>
                         <p>
                             Einfache HTTP-Schnittstelle (Port 8888)
                         </p>
