Show server-screenshot as fragment.

--- a/nodejs-talk/index.html
+++ b/nodejs-talk/index.html
@@ -215,7 +215,7 @@ http.createServer(function (req, res) {
   res.end();
 }).listen(8888);
                         </code></pre>
-                        <img alt="Simple Node.js Webserver" src="img/simple-server.png" width="854">
+                        <img class="fragment" alt="Simple Node.js Webserver" src="img/simple-server.png" width="854">
                     </section>
                 </section>
 
