Add slide about installation (with nvm).

--- a/nodejs-talk/index.html
+++ b/nodejs-talk/index.html
@@ -217,6 +217,20 @@ http.createServer(function (req, res) {
                         </code></pre>
                         <img class="fragment" alt="Simple Node.js Webserver" src="img/simple-server.png" width="854">
                     </section>
+
+                    <section>
+                        <h2>Installation</h2>
+                        <ul>
+                            <li>Installer für Windows</li>
+                            <li>Viele Paketmanager stellen Pakete bereit</li>
+                            <li>from source</li>
+                            <li>via <a href="https://github.com/creationix/nvm">nvm (node version manager)</a></li>
+                        </ul>
+                        <pre><code data-trim contenteditable>
+>> nvm ls-remote        # Welche Versionen gibt es?
+>> nvm use v0.12.0      # Verwende nun v0.12.0
+                        </code></pre>
+                    </section>
                 </section>
 
                 <section>
