--- a/nodejs-talk/index.html
+++ b/nodejs-talk/index.html
@@ -235,10 +235,11 @@ http.createServer(function (req, res) {
 
                 <section>
                     <section>
+                        <img src="img/npm-logo.svg" class="sideimage plain contrast">
                         <h2>npm</h2>
                         <ul>
                             <li>Paketmanager für JavaScript</li>
-                            <li>Standard Paket-Repository für node.js (Seit Node.js Version 0.6.3 Teil der Installation)</li>
+                            <li>Standard Paket-Repository für Node.js (Seit Node.js Version 0.6.3 Teil der Installation)</li>
                             <li>Einfache Installation von Software-Pakten</li>
                             <li>Automatische Auflösung von Abhängigkeiten</li>
                             <li>Defacto-Standard zur Modularisierung von JavaScript</li>
