Add slide showing npm vs. other module managers.

--- a/nodejs-talk/index.html
+++ b/nodejs-talk/index.html
@@ -259,6 +259,10 @@ http.createServer(function (req, res) {
                         </ul>
                     </section>
                     <section>
+                        <iframe class="stretch" src="http://www.modulecounts.com/"></iframe>
+                        <a href="http://www.modulecounts.com/">http://www.modulecounts.com/</a>
+                    </section>
+                    <section>
                         <h2>npm - Installation von Paketen</h2>
                     <pre><code data-trim contenteditable>
 >> npm install package_name
