Add plain 'npm install' + comments for other usages.

--- a/nodejs-talk/index.html
+++ b/nodejs-talk/index.html
@@ -265,10 +265,13 @@ http.createServer(function (req, res) {
                     <section>
                         <h2>npm - Installation von Paketen</h2>
                     <pre><code data-trim contenteditable>
->> npm install package_name
+>> npm install package_name       # installiert lokal
                     </code></pre>
                     <pre><code data-trim contenteditable>
->> npm install ol-app-setup -g
+>> npm install ol-app-setup -g    # installiert global
+                    </code></pre>
+                    <pre><code data-trim contenteditable>
+>> npm install                    # liest package.json aus
                     </code></pre>
                     <a href="https://docs.npmjs.com/getting-started/installing-npm-packages-locally">weitere Informationen...</a>
                     </section>
