Add aslide about io.js.

--- a/nodejs-talk/index.html
+++ b/nodejs-talk/index.html
@@ -278,6 +278,25 @@ http.createServer(function (req, res) {
                 </section>
 
                 <section>
+                    <img class="sideimage plain contrast" src="img/io.js.png" />
+                    <h2 class="force-natural-case">io.js</h2>
+                    <ul>
+                        <li>Fork von Node.js / npm kompatibel</li>
+                        <li>Einige Kernentwickler &Rarr; io.js</li>
+                        <li>Verschiedenste Gründe, u.a.
+                            <ul>
+                                <li>Open Governance Model</li>
+                                <li>zu seltene Releases</li>
+                                <li>persönliche Differenzen</li>
+                            </ul>
+                        </li>
+                        <li>Changes re-importierbar nach Node.js</li>
+                        <li class="fragment highlight">Unbedingt im Auge behalten</li>
+                    </ul>
+
+                </section>
+
+                <section>
                     <h1>Mit Node.js und npm die Welt beherrschen</h1>
                     <a href="http://photobucket.com/images/pinky%20and%20the%20brain" target="_blank"><img src="http://i392.photobucket.com/albums/pp5/jefforycloyd/JeffsCartoons/PinkyandtheBrain.jpg" border="0" alt="pinky and the brain photo: Pinky and the Brain PinkyandtheBrain.jpg"/></a>
                 </section>
