Small readability enhancement.

--- a/nodejs-talk/index.html
+++ b/nodejs-talk/index.html
@@ -304,7 +304,7 @@ http.createServer(function (req, res) {
                 <section>
                     <section style="background-image: url(img/grass.jpg);">
                         <h1 style="">turf.js</h1>
-                        <span style="font-size: small;">Quelle Bild: http://www.macwright.org/presentations/turf-geodc/grass.jpg</small>
+                        <span style="font-size: small;text-shadow: 0 0 7px #000;">Bildquelle: http://www.macwright.org/presentations/turf-geodc/grass.jpg</small>
                     </section>
                     <section>
                         <h2>turf.js</h2>
