Add a slide w/ total integration of client & server.

--- a/nodejs-talk/index.html
+++ b/nodejs-talk/index.html
@@ -444,13 +444,9 @@ console.log(projected);
                 </section>
 
                 <section>
-                    <h2>Schlussfolie</h2>
-                    <ul>
-                        <li>No order here</li>
-                        <li>Or here</li>
-                        <li>Or here</li>
-                        <li>Or here</li>
-                    </ul>
+                    <h2>Integrativ Server und Client</h2>
+                    <img class="stretch" src="img/one-js.png"/>
+                    <a href="https://gist.github.com/WebReflection/5cdfe5adc4c3a284b669">https://gist.github.com/WebReflection/5cdfe5adc4c3a284b669</a>
                 </section>
 
                 <section>
