Add final slide & smaller adjustments to imprint.

--- a/nodejs-talk/index.html
+++ b/nodejs-talk/index.html
@@ -449,28 +449,42 @@ console.log(projected);
                     <a href="https://gist.github.com/WebReflection/5cdfe5adc4c3a284b669">https://gist.github.com/WebReflection/5cdfe5adc4c3a284b669</a>
                 </section>
 
-                <section>
+                <section id="thanks-questions">
+                    <h4>That's it</h4>
+                    <hr />
+                    <h1 style="font-size:3.0em">Fragen &amp; Anmerkungen?</h1>
+                    <hr />
+                    <p class="subtle">
+                        <a href="#/imprint">Impressum</a>
+                    </p>
+                </section>
+
+                <section id="imprint">
                     <h2>Impressum</h2>
-                    <h3>Autoren</h3>
+                    <h4>Autoren</h4>
                     <div style="width: 45%; float: left;">
-                        <address>
-                            Christian Mayer<br />
+                        <address style="text-align: left">
+                            <strong>Christian Mayer</strong><br />
+                            <span style="font-size: smaller;">
                             meggsimum.de<br />
                             Hauptstraße 165a<br />
                             67125 Dannstadt-Schauernheim<br />
                             chris@meggsimum.de
+                            </span>
                         </address>
                     </div>
                     <div style="width: 45%; float: right;">
-                        <address>
-                            Marc Jansen<br />
+                        <address style="text-align: right">
+                            <strong>Marc Jansen</strong><br />
+                            <span style="font-size: smaller;">
                             terrestris GmbH &amp; Co. KG<br />
                             P&uuml;tzchens Chaussee 56<br />
                             53227 Bonn<br />
                             jansen@terrestris.de
+                            </span>
                         </address>
                     </div>
-                    <h3 style="clear:both;">Lizenz</h3>
+                    <h4 style="clear:both;">Lizenz</h4>
                     <p id="license">
                         Diese Folien sind unter <a
                         href="http://creativecommons.org/licenses/by-sa/2.0/">CC BY-SA</a>
