--- a/nodejs-talk/index.html
+++ b/nodejs-talk/index.html
@@ -184,7 +184,7 @@
                         <h2>JavaScript&hellip;</h2>
                         <br>
                         <br>
-                        <h2  class="fragment">&hellip;auf dem Server</h2>
+                        <h2 class="fragment">&hellip;auf dem Server</h2>
                     </section>
                     <section>
                         <h2>Hello World</h2>
@@ -302,7 +302,8 @@ http.createServer(function (req, res) {
                 </section>
 
                 <section>
-                    <section style="background-image: url(img/grass.jpg);">
+                    <!-- <section style="background-image: url(img/grass.jpg);"> -->
+                    <section data-background="img/grass.jpg">
                         <h1 style="">turf.js</h1>
                         <span style="font-size: small;text-shadow: 0 0 7px #000;">Bildquelle: http://www.macwright.org/presentations/turf-geodc/grass.jpg</small>
                     </section>
