Replace non-embedable iframe with static image.

--- a/nodejs-talk/index.html
+++ b/nodejs-talk/index.html
@@ -259,7 +259,7 @@ http.createServer(function (req, res) {
                         </ul>
                     </section>
                     <section>
-                        <iframe class="stretch" src="http://www.modulecounts.com/"></iframe>
+                        <img class="stretch contrast" src="img/module-counts.png" />
                         <a href="http://www.modulecounts.com/">http://www.modulecounts.com/</a>
                     </section>
                     <section>
