--- a/nodejs-talk/index.html
+++ b/nodejs-talk/index.html
@@ -278,22 +278,27 @@ http.createServer(function (req, res) {
                 </section>
 
                 <section>
-                    <img class="sideimage plain contrast" src="img/io.js.png" />
-                    <h2 class="force-natural-case">io.js</h2>
-                    <ul>
-                        <li>Fork von Node.js / npm kompatibel</li>
-                        <li>Einige Kernentwickler &Rarr; io.js</li>
-                        <li>Verschiedenste Gründe, u.a.
-                            <ul>
-                                <li>Open Governance Model</li>
-                                <li>zu seltene Releases</li>
-                                <li>persönliche Differenzen</li>
-                            </ul>
-                        </li>
-                        <li>Changes re-importierbar nach Node.js</li>
-                        <li class="fragment highlight">Unbedingt im Auge behalten</li>
-                    </ul>
+                    <section data-background="img/io.jpg">
+                        <h1 class="force-natural-case" style="text-shadow: 0 0 10px #000;">io.js</h1>
+                    </section>
 
+                    <section>
+                        <img class="sideimage plain contrast" src="img/io.js.png" />
+                        <h2 class="force-natural-case">io.js</h2>
+                        <ul>
+                            <li>Fork von Node.js / npm kompatibel</li>
+                            <li>Einige Kernentwickler &Rarr; io.js</li>
+                            <li>Verschiedenste Gründe, u.a.
+                                <ul>
+                                    <li>Open Governance Model</li>
+                                    <li>zu seltene Releases</li>
+                                    <li>persönliche Differenzen</li>
+                                </ul>
+                            </li>
+                            <li>Changes re-importierbar nach Node.js</li>
+                            <li class="fragment highlight">Unbedingt im Auge behalten</li>
+                        </ul>
+                    </section>
                 </section>
 
                 <section>
