--- a/nodejs-talk/index.html
+++ b/nodejs-talk/index.html
@@ -393,8 +393,13 @@ var proj4 = require('proj4');
 
 // reproject a point
 var projected = proj4('EPSG:4326', 'EPSG:900913', [2,5]);
-//[ 222638.98158654713, 557305.2572745753 ]
 console.log(projected);
+                        </code></pre>
+                        <pre><code data-trim contenteditable>
+>> node proj4.js
+                        </code></pre>
+                        <pre><code data-trim contenteditable>
+>> [ 222638.98158654713, 557305.2572745753 ]
                         </code></pre>
                     </section>
                 </section>
