Added chapter web mapping

--- a/nodejs-talk/index.html
+++ b/nodejs-talk/index.html
@@ -406,21 +406,41 @@ console.log(projected);
 
                 <section>
                     <section>
-                        <h2>Web map (Leaflet oder ol3)</h2>
+                        <h2>Web Mapping</h2>
+                        <!-- TODO image of web map -->
+                    </section>
+                    <section>
+                        <h2>OpenLayers Application Setup Generator</h2>
                         <ul>
-                            <li>No order here</li>
-                            <li>Or here</li>
-                            <li>Or here</li>
-                            <li>Or here</li>
+                            <li>CLI für Projektsetup von OL Applikationen</li>
+                            <li>OpenLayers v2 und v3</li>
+                            <li>Integration von Boostrap und jQuery möglich</li>
                         </ul>
+                        <pre><code data-trim contenteditable>
+>> npm install npm install ol-app-setup -g
+                        </code></pre>
+                        <pre><code data-trim contenteditable>
+>> ol-app-setup -t /tmp/my-ol-project/
+                        </code></pre>
+                    <a href="https://www.npmjs.com/package/ol-app-setup">weitere Informationen...</a>
                     </section>
                     <section>
-                        <h2>Basement Level 1</h2>
-                        <p>Nested slides are useful for adding additional detail underneath a high level horizontal slide.</p>
-                    </section>
-                    <section>
-                        <h2>Basement Level 2</h2>
-                        <p>That's it, time to go back up.</p>
+                        <h2>OpenLayers</h2>
+                        <ul>
+                            <li>Über <a href="https://www.npmjs.com/package/openlayers">npmjs</a> als Modul verfügbar</li>
+                            <li>Paketmanagement und Unit-Tests über Node.js und npm</li>
+                        </ul>
+                        <pre><code data-trim contenteditable>
+>> npm install openlayers
+                        </code></pre>
+                        <h2>Leaflet</h2>
+                        <ul>
+                            <li>Über <a href="https://www.npmjs.com/package/leaflet">npmjs</a> als Modul verfügbar</li>
+                            <li>Paketmanagement und Unit-Tests über Node.js und npm</li>
+                        </ul>
+                        <pre><code data-trim contenteditable>
+>> npm install leaflet
+                        </code></pre>
                     </section>
                 </section>
 
