Remove some placeholder slides and the one-js slides to make the talk a bit shorter

--- a/nodejs-talk/index.html
+++ b/nodejs-talk/index.html
@@ -445,26 +445,6 @@ console.log(projected);
                 </section>
 
                 <section>
-                    <section>
-                        <h2>Alles zusammen in Action</h2>
-                        <ul>
-                            <li>Daten laden</li>
-                            <li>Daten aufbereiten</li>
-                            <li>Speichern</li>
-                            <li>Publizieren</li>
-                        </ul>
-                    </section>
-                    <section>
-                        <h2>Basement Level 1</h2>
-                        <p>Nested slides are useful for adding additional detail underneath a high level horizontal slide.</p>
-                    </section>
-                    <section>
-                        <h2>Basement Level 2</h2>
-                        <p>That's it, time to go back up.</p>
-                    </section>
-                </section>
-
-                <section>
                     <h2>Fazit / Message</h2>
                     <ul>
                         <li>No order here</li>
@@ -474,11 +454,11 @@ console.log(projected);
                     </ul>
                 </section>
 
-                <section>
+<!--                 <section>
                     <h2>Integrativ Server und Client</h2>
                     <img class="stretch" src="img/one-js.png"/>
                     <a href="https://gist.github.com/WebReflection/5cdfe5adc4c3a284b669">https://gist.github.com/WebReflection/5cdfe5adc4c3a284b669</a>
-                </section>
+                </section> -->
 
                 <section id="thanks-questions">
                     <h4>That's it</h4>
